2006-03-10  Oliver Munz  <munz@speag.ch>

	* src/timer_pit.c: fix hal_delay_us(). hal_clock_read for
	initializing the PIT if needed. Change hal_clock_reset() to allow
	setting of a new period.  This is required when the timer is
	started by hal_delay_us() or hal_clock_read() before
	hal_clock_initialize().

2006-03-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/timer_pit.c (hal_delay_us): Start the PIT if it is not
	running when hal_delay_us is called. This happens when the kernel
	is not used. Problem found by Oliver Munz.

2006-03-10  Oliver Munz  <munz@speag.ch>

	* src/hal_diag.c (cyg_hal_plf_serial_isr): Change the #ifdefs to
	cleanly match the CDL.

2006-02-28  Andrew Lunn  <andrew.lunn@ascom.ch>
            Oliver Munz  <munz@speag.ch>
	
	* include/var_io.h (AT91_US_PTCR_RXTDIS): Add bit fields for the
	USART DMA control register.

2006-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/var_io.h: Added the USB device registers.

2006-02-19  Andrew Lunn  <andrew.lunn@ascom.ch>
           Oliver Munz  <munz@speag.ch>

	* cdl/hal_arm_at9a.cdl: Add the AT91SAM7S variant and control
 	  for new timer and debug usart code.
	* include/var_io.h: Register definitions for AT91SAM7S
	* include/var_arch.h: Idle action for AT91SAM7S
	* src/at91_misc.c (hal_hardware_init): Call HAL_PLF_HARDWARE_INIT 
	  for any platform specific initialization
	* src/at91_misc.c (hal_at91_reset_cpu): Use the reset controller 
	  if it exists.
	* src/at91_misc.c (hal_IRQ_handler): Decode interrupts from
	  the system controller if it exists.
	* src/timer_tc.c (NEW) eCos timer using the Timer Counter
	* src/timer_pit.c (NEW) eCos timer using Periodic Interval Timer
	* src/hal_diag_dbg.c (NEW) Debug output via debug UART.
	* src/hal_diag.h: Indicate hal_at91_reset_cpu() is a C function
	  otherwise we have problems with the watchdog driver which is C++.

2005-05-30  Ezequiel Conde <ezeq@cc.isel.ipl.pt>

	* src/at91_misc.c ( hal_delay_us ): Clear status before running
	delay
	